# simply

./: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  gcloud_quickstart.md  pyproject.toml
simply/: config_lib.py  data_lib.py  main.py  model_lib.py
simply/utils/: checkpoint_lib.py  sharding.py
